# sapien

./: CMakeLists.txt  README.md
cmake/: CreateSapienConfig.cmake  FindOpenBLAS.cmake  ReadSapienVersionFromSource.cmake  UpdateCacheVariable.cmake  config.h.in
examples/: CMakeLists.txt  line_search_minimizer.cc  sgd_mnist.cc  sgd_regressor.cc  solver_test.h  solver_test_problems.cc  solver_test_problems.h  trust_region_minimizer.cc
include/sapien/: constants.h  dataset.h  metrics.h  version.h
include/sapien/internal/: port.h  sapien_math.h  type_traits.h
include/sapien/internal/type_traits/: enable_if.h  is_float.h  is_integral.h  is_pointer.h
include/sapien/lr/: logistic_regression.h  types.h
include/sapien/optimizer/: line_search_minimizer.h  minimizer.h  objective_functions.h  trust_region_minimizer.h
include/sapien/sgd/: base.h  classifier.h  loss.h  regressor.h  sgd_classifier.h  sgd_regressor.h  types.h
include/sapien/solver/: line_search_minimizer.h  objective_functions.h  trust_region_minimizer.h  types.h
internal/sapien/: CMakeLists.txt
internal/sapien/dataset/: load_mnist.cc
internal/sapien/lr/: logistic_regression.cc
internal/sapien/math/: sapien_math.cc
internal/sapien/math/test/: CMakeLists.txt  sapien_math_test.cc
internal/sapien/metrics/: accuracy_score.cc  r2_score.cc
internal/sapien/metrics/test/: CMakeLists.txt  accuracy_score_test.cc  r2_score_test.cc
internal/sapien/optimizer/: line_search.cc  line_search.h  line_search_algorithm.cc  line_search_algorithm.h  line_search_minimizer.cc  objective_functions.h  trust_region_minimizer.cc
internal/sapien/optimizer/test/: CMakeLists.txt  line_search_test.cc
internal/sapien/sgd/: base.cc  classifier.cc  default_options.cc  default_options.h  loss.cc  regressor.cc  sgd_classifier.cc  sgd_regressor.cc  types.cc
internal/sapien/sgd/test/: CMakeLists.txt  classifier_test.cc  sgd_base_test.cc  sgd_classifier_test.cc  sgd_loss_test.cc  sgd_types_test.cc
internal/sapien/solver/: line_search.cc  line_search.h  line_search_algorithm.cc  line_search_algorithm.h  line_search_minimizer.cc  trust_region_minimizer.cc
internal/sapien/utility/: byte_orderer.h  seq_dataset.cc  seq_dataset.h  sequential_dataset.cc  sequential_dataset.h  stringprintf.cc  stringprintf.h  unique.h  wall_time.cc  wall_time.h  weight_vector.cc  weight_vector.h
internal/sapien/utility/test/: CMakeLists.txt  seq_dataset_test.cc  stringprintf_test.cc  weight_vector_test.cc
